test/Fail/Issue2788b.agda
module _ where

primitive
  primGlue : _
